feat: deploy with jenkins